# coinrd

./: .env  Cargo.toml  README.md  docker-compose.yml  providers.toml
db/logs/: logs
src/: coin.rs  coin_info.rs  config.rs  database.rs  gecko.rs  latest_coins_data.rs  main.rs  provider.rs
test/: providers-test-1.toml  providers-test-2.toml  providers-test.toml
