[package]
name = "coinrd"
version = "0.1.0"
authors = ["mkd <monkeydioude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version="0.11.2", features = ["blocking"] }
chrono = "0.4"
mongodb = { version="1.2.1", default-features=false, features=["sync"] }
log = "^0.4.14"
